@@ -243,6 +243,7 @@ Version 1.5.1 -- CVS
   - Sanitized search in ldap address book backend. Use of asterisk 
     together with other symbols is not supported.
   - Added ldap backend to change_password plugin.
+  - Change defaults of some prefs to more sensible / usable settings.
 
 Version 1.5.0
 --------------------
